--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -3,8 +3,7 @@ $version$ = $Revision$
 addons.jdgrowlnotification.menu.enable = Meldungen aktivieren
 addons.jdlowspeed.statusmessage.disabled = Low Speederkennung ausschalten
 addons.jdlowspeed.statusmessage.enabled = Low Speederkennung einschalten
-addons.jdshutdown.menu.disable = Herunterfahren deaktivieren
-addons.jdshutdown.menu.enable = Herunterfahren aktivieren
+addons.jdshutdown.menu = System nach dem Downloaden herunterfahren
 addons.jdshutdown.statusmessage.disabled = Das System wird nach dem Download NICHT heruntergefahren.
 addons.jdshutdown.statusmessage.enabled = Das System wird nach dem Download heruntergefahren.
 addons.schedule.menu.add = Hinzufügen
@@ -68,6 +67,7 @@ downloadlink.status.error.fatal = Schwerwiegender Fehler
 downloadlink.status.error.file_exists = Datei ist schon vorhanden
 downloadlink.status.error.file_not_found = Datei nicht gefunden
 downloadlink.status.error.no_connection = Keine Netzwerkverbindung
+downloadlink.status.error.post_process = Verarbeitungs Fehler
 downloadlink.status.error.premium = Premium Fehler
 downloadlink.status.error.temp_unavailable = Kurzzeitig nicht verfügbar
 downloadlink.status.error_unexpected = Unerwarteter Fehler
@@ -188,8 +188,11 @@ gui.config.jac.column.use = Verwenden
 gui.config.jac.status.auto = Automatische Erkennung
 gui.config.jac.status.noauto = Manuelle Eingabe
 gui.config.jdrr.close = Schließen
+gui.config.jdrr.infolable = <span color=\"#4682B4\">Überprüfe die IP-Adresse des Routers und drück auf Start,<br>ein Browserfenster mit der Startseite des Routers öffnet sich,<br>nach dem Reconnect drückst du auf Stop und speicherst.<br>Mehr Informationen gibt es </span><a href=\"http://wiki.jdownloader.org/index.php?title=Recorder\">hier</a>
+gui.config.jdrr.popup.title = JDRRPopup
 gui.config.jdrr.reconnectfaild = Reconnect fehlgeschlagen
 gui.config.jdrr.savereconnect = Der Reconnect war erfolgreich möchten sie jetzt speichern?
+gui.config.jdrr.title = Reconnect Recorder
 gui.config.liveheader.autoconfig = Router automatisch erkennen
 gui.config.liveheader.btnfindip = Router IP ermitteln
 gui.config.liveheader.dialog.importrouter = Router importieren
@@ -768,6 +771,7 @@ modules.packagemanager.loadednewpackage.more = Weitere Informationen & Installat
 modules.packagemanager.loadednewpackage.title = Paket Update installiert
 modules.packagemanager.packagename = JD-Update
 modules.reconnect.pleaseselect = Bitte Methode auswählen:
+modules.reconnect.rr = Reconnect aufzeichnen
 modules.reconnect.testreconnect = Reconnect testen
 modules.reconnect.types.batch = Batch
 modules.reconnect.types.clr = CLR Script
@@ -812,7 +816,6 @@ plugins.errors.pluginerror = Plugin Fehler. Bitte Support informieren
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
 plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
-plugins.host.fastload.getticketmsg = Hole FastLoad-Ticket!
 plugins.host.fastload.ticketmessage = Kaufen Sie sich ein Fastloadspeedticket um die Geschwindigkeit auf 300kb/s zu erhähen
 plugins.host.fastload.wait_ticketmessage = Warten auf Speedticket
 plugins.host.gigasize.freeaccount.pass = Passwort
@@ -900,6 +903,8 @@ plugins.optional.jdchat.name = JD Chat
 plugins.optional.jdchat.performonstart = Befehle nach dem Verbinden ausführen
 plugins.optional.jdchat.user = Nickname
 plugins.optional.jdgrowlnotification.name = JDGrowlNotification
+plugins.optional.jdhjsplit.linkmenu.merge = Zusammenführen
+plugins.optional.jdhjsplit.linkmenu.package.merge = Paket zusammenführen
 plugins.optional.jdhjsplit.name = JD-HJMerge
 plugins.optional.jdlighttray.minimizetotray = Zum Tray minimieren
 plugins.optional.jdlighttray.name = JDLightTrayIcon
@@ -972,8 +977,9 @@ plugins.optional.langfileeditor.selectold = Alte Einträge auswählen
 plugins.optional.langfileeditor.show_gui = LanguageEditor starten
 plugins.optional.langfileeditor.showdupes = Doppelte Einträge anzeigen
 plugins.optional.langfileeditor.sortentries = Einträge sortieren
-plugins.optional.langfileeditor.sourcefolder = Source Folder: 
-plugins.optional.langfileeditor.sourcevalue = Source Wert
+plugins.optional.langfileeditor.sourcefile = Quelle (Datei):
+plugins.optional.langfileeditor.sourcefolder = Quelle (Ordner):
+plugins.optional.langfileeditor.sourcevalue = Wert von Quelle
 plugins.optional.langfileeditor.string = String
 plugins.optional.langfileeditor.title = jDownloader - Language File Editor
 plugins.optional.langfileeditor.translate = Mit Google übersetzen
@@ -1100,10 +1106,12 @@ sys.warning.linklist.incompatible = Linkliste inkompatibel. \r\nBackup angelegt.
 sys.warning.newmessage = Neue Systemnachricht
 system.dialogs.update = Updates verfügbar
 system.dialogs.update.message = <font size="2" face="Verdana, Arial, Helvetica, sans-serif">%s update(s)  und %s Paket(e) oder Addon(s) verfügbar. Jetzt installieren??</font>
+system.download.docrc2 = CRC-Check läuft (%s)
+system.download.docrc2.failed = CRC-Check fehlgeschlagen (%s)
+system.download.docrc2.success = CRC-Check OK (%s)
 system.download.errors.couldnotoverwrite = Konnte vorhandene Datei nicht überschreiben
 system.download.errors.couldnotoverwritejdu = Update: Download Fehler
 system.download.errors.couldnotrename = Konnte Part-Datei nicht umbenennen
-system.download.errors.crcfailed = CRC Fehler
 system.download.errors.invalidoutputfile = Ungültiger Zielpfad
 system.download.errors.linkisblocked = Datei wird schon von %s geladen
 system.download.triggerfileexists = Wenn eine Datei schon vorhanden ist:
