--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -41,7 +41,7 @@ controller.status.fileexists.skip = Bu dosya zaten mevcut
 controller.status.pluindefekt = Takmabirim zaman aşımına uğramış
 controller.status.tempUnavailable = Geçici olarak mevcut değil
 convert.dialog.chooseformat = Bir format seçin:
-convert.dialog.keepformat = Bu formatı sakla FREELOADER keep same format for this session
+convert.dialog.keepformat = Bu oturumda bu formatı kullan
 convert.progress.convertingto = dönüştürülüyor
 convert.progress.unknownintype = Bilinmeyen Format
 decrypter.invalidaccount = Geçerli hesap bulunamadı
@@ -389,7 +389,7 @@ gui.linkinfo.rate = Yenileme sıklığı
 gui.linkinfo.saveto = Buraya Kaydet
 gui.linkinfo.speed = Hız
 gui.linkinfo.title = Link Detayları: 
-gui.linkinfo.waittime = Bekleme süresi FREELOADER
+gui.linkinfo.waittime = Bekleme süresi
 gui.linklist.editpackagename.message = Yeni paket adı
 gui.linklist.newpackage.message = Yeni paket isimleri
 gui.linklist.status.doresume = Sürdürme için bekleniyor
@@ -453,7 +453,7 @@ gui.menu.action.edit.items_up.desc = Seçili girdileri bir üst satıra taşı
 gui.menu.action.edit.items_up.mnem = O
 gui.menu.action.edit.items_up.name = Yukarı taşı
 gui.menu.action.exit.accel = CTRL+X
-gui.menu.action.exit.desc = Uygulamadan çıkışı
+gui.menu.action.exit.desc = jDownloader çıkış
 gui.menu.action.exit.mnem = B
 gui.menu.action.exit.name = Çıkış
 gui.menu.action.help.accel = CTRL+9
@@ -1082,6 +1082,7 @@ plugins.trayicon.popup.menu.toggleClipboard = Pano açık/kapalı
 plugins.trayicon.popup.menu.toggleReconnect = Yeniden Bağlan açık/kapalı
 plugins.trayicon.popup.menu.update = JD güncelleme
 plugins.trayicon.popup.title = JDownloader
+routerinfocollector.dialog.title = Otomatik Router algılamayı geliştirmek için bize destek olun
 showcaptcha.choose.file = imge dosyası seç
 showcaptcha.chooser.title = jDownloader :: Captcha Göster
 sys.ask.rlyclose = jDownloader gerçekten kapatılsın mı ?
