--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -67,7 +67,7 @@ downloadlink.status.error.download_limit = İndirme Limitine ulaşıldı
 downloadlink.status.error.downloadfailed = [İndirme başarısız]
 downloadlink.status.error.fatal = Ciddi bir hata algılandı
 downloadlink.status.error.file_exists = [bu dosya zaten mevcut]
-downloadlink.status.error.file_not_found = [bu dosya bunlunamdı]
+downloadlink.status.error.file_not_found = [bu dosya bulunamdı]
 downloadlink.status.error.no_connection = [Bağlantı yok]
 downloadlink.status.error.post_process = [İşlem hatası]
 downloadlink.status.error.premium = [Premium hatası]
