--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -283,8 +283,8 @@ gui.config.gui.autopackagelimit = Automatyczny limit zarządzania pakietami.
 gui.config.gui.Browser = Przeglądarka
 gui.config.gui.browser = Przeglądarka
 gui.config.gui.container.tab = Lista linków
-gui.config.gui.custum_browser = Ĺšcieżka do przeglądarki
-gui.config.gui.custum_browser_param = Parametr %url (jeden parametr na linię)
+gui.config.gui.custom_browser = Ĺšcieżka do przeglądarki
+gui.config.gui.custom_browser_param = Parametr %url (jeden parametr na linię)
 gui.config.gui.disabledialogs = Wyłącz potwierdzenia
 gui.config.gui.disabletooltipps = Wyłącz podpowiedzi z listy pobrań
 gui.config.gui.extended = Zaawansowane
@@ -303,7 +303,7 @@ gui.config.gui.soundtheme = Schemat dźwięków
 gui.config.gui.testbrowser = Testuj przeglądarkę
 gui.config.gui.testbrowser.message = JDownloader spróbuj teraz otworzyć stronę http://jdownloader.org w wybranej przez ciebie przeglądarce.
 gui.config.gui.theme = Temat
-gui.config.gui.use_custum_browser = Użyj przeglądarki użytkownika
+gui.config.gui.use_custom_browser = Użyj przeglądarki użytkownika
 gui.config.hjsplit.overwrite = Nadpisuj istniejące pliki
 gui.config.hjsplit.remove_merged = Usuwaj archiwum po scaleniu
 gui.config.httpreconnect.connection = Połączono
