--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -170,6 +170,8 @@ gui.config.general.webupdate.disable = Update only at user request
 gui.config.gui.autopackagelimit = Threshold for automatic Packagegeneration
 gui.config.gui.browser = Browser
 gui.config.gui.container.tab = Downloadlinks
+gui.config.gui.custom_browser = Browserpath
+gui.config.gui.custom_browser_param = Parameter %url (one parameter per line)
 gui.config.gui.disabledialogs = Disable affirmation dialogs
 gui.config.gui.disabletooltipps = Disable tooltipps from the download treetable
 gui.config.gui.extended = Advanced Settings
@@ -180,7 +182,10 @@ gui.config.gui.look.tab = Look & Feel
 gui.config.gui.plaf = Style (restart to apply)
 gui.config.gui.showsplash = Show splash screen on program startup
 gui.config.gui.soundtheme = Soundtheme
+gui.config.gui.testbrowser = Test browser
+gui.config.gui.testbrowser.message = JDownloader now tries to open http://jdownloader.org in your browser.
 gui.config.gui.theme = Theme
+gui.config.gui.use_custom_browser = Use custom browser
 gui.config.hjsplit.overwrite = Overwrite existing files
 gui.config.hjsplit.remove_merged = Delete archive after merging
 gui.config.jac.column.method = Method
@@ -665,6 +670,7 @@ interaction.liveheader.progress.2_ip = (IP) HTTP LiveHeader :
 interaction.liveheader.progress.3_step = (Step) HTTP LiveHeader :
 interaction.liveheader.progress.4_step = (%s) HTTP LiveHeader
 interaction.liveheader.progress.5_ipcheck = (IP check)HTTP LiveHeader %s / %s
+interaction.liveheader.progress.5_ipcheck_emergency = (IPCHECK EMERGENCY)HTTPLiveHeader %s / %s
 interaction.liveheader.progress.5_wait = (Wait) HTTP LiveHeader
 interaction.packagemanager.name = Update packages
 interaction.reconnect.ipfiltered.warning.short = The IP %s is not allowed
@@ -680,7 +686,7 @@ interaction.simpleexecute.helplink = http://jdownloader.org/page.php?id=119
 interaction.simpleexecute.name = Execute Programm/Script
 interaction.simpleexecute.parameter = Parameter(1 parameter/line)
 interaction.simpleexecute.test = Execute now
-interaction.simpleexecute.useexecutein = Custumized 'Execute in'
+interaction.simpleexecute.useexecutein = Customized 'Execute in'
 interaction.simpleexecute.waitfortermination = Wait until command finished
 interaction.simpleexecute.waittime = Max. Execution time
 interaction.trigger.after_extract = After Extraction
@@ -746,6 +752,7 @@ main.start.logwarning.body = ATTENTION. Your Loglevel is set to %s and the Logfi
 main.start.logwarning.title = Logwarning
 main.status.active = on
 main.status.inactive = off
+main.twitter.url = http://twitter.com/statuses/user_timeline/jdownloader.xml
 main.urls.faq = http://wiki.jdownloader.org/index.php?title=JDownloader_Wiki:Portal_English
 modules.container.dlc.containerinfo = <div style="width:450px;font-family:Geneva, Arial, Helvetica, sans-serif; font-size: 9px;"><font color="#0066FF"><strong>DLContainer succesfully loaded.</strong></font><br/><hr/><table style="width:450px"><tr><td>Created from </td><td>%s</td></tr><tr><td>Created with </td><td>%s</td></tr><tr><td>Packages </td><td>%s</td></tr><tr><td>Category </td><td>%s</td></tr><tr ><td colspan="2">%s</td></tr></table></div>
 modules.container.dlc.loadedmessage = DownloadLinkContainer loaded
@@ -780,6 +787,7 @@ plugins.container.exit = Finished. Found %s links
 plugins.container.exit.error = Container error: %s
 plugins.container.found = Process %s links
 plugins.container.open = Open Container
+plugins.decrypt.brazil-series.com1 = Download-Format: Only AVI without subtitle
 plugins.decrypt.cryptitcom.password = Folder is password protected. Enter password:
 plugins.decrypt.general.captchacodewrong = Wrong captcha code
 plugins.decrypt.general.hosterselection = Hoster selection
@@ -801,6 +809,7 @@ plugins.errors.pluginerror = Plugin error. Inform Support
 plugins.errors.uploadedto.premiumtrafficreached = Traffic limit reached
 plugins.errors.wrongpassword = Password wrong
 plugins.host.enterlinkpassword = Please enter Linkpassword
+plugins.host.fastload.prepare = Wait for linkconfirmation
 plugins.host.fastload.ticketmessage = Get a Fastload.net Speedticket to boost speed up to 300kb/s
 plugins.host.fastload.wait_ticketmessage = Wait for Speedticket
 plugins.host.gigasize.freeaccount.pass = Password
@@ -843,6 +852,7 @@ plugins.menu.accounts = Accounts
 plugins.menu.configs = Configuration
 plugins.menu.enable_premium = Enable Account
 plugins.menu.fastload = Get Freeticket
+plugins.menu.fastload_refresh = Refresh all Tickets
 plugins.menu.noaccountsyet = No accounts yet
 plugins.menu.premiuminfo = Get Accountinfo
 plugins.netload.downloadpassword_question = Password protected. Enter Password for %s
@@ -1078,6 +1088,7 @@ showcaptcha.chooser.title = jDownloader :: Show Captcha
 sys.ask.rlyclose = Really wanna close jDownloader?
 sys.dlc.error_version = DLC encryption failed. Please be shure you're using the last JD-version.
 sys.dlc.success = DLC encryption successfully. Extract for testing now?
+sys.linklist.addnew.prepare = Preparing Downloadlink
 sys.message.welcome = Welcome to JDownloader
 sys.warning.dlcerror = Defect DL-Container
 sys.warning.dlcerror.server = <b>Do you have installed the newest version of jD?</b> <br>Server response:
