--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -170,6 +170,8 @@ gui.config.general.webupdate.disable = Update nur manuell durchführen
 gui.config.gui.autopackagelimit = Schwelle der Auto. Paketverwaltung.
 gui.config.gui.browser = Browser
 gui.config.gui.container.tab = Downloadlinks
+gui.config.gui.custom_browser = Browserpfad
+gui.config.gui.custom_browser_param = Parameter %url (Pro Zeile ein Parameter)
 gui.config.gui.disabledialogs = Bestätigungsdialoge abschalten
 gui.config.gui.disabletooltipps = ToolTipps der DownloadListe abschalten
 gui.config.gui.extended = Erweiterte Einstellungen
@@ -180,7 +182,10 @@ gui.config.gui.look.tab = Anzeige & Bedienung
 gui.config.gui.plaf = Style (Neustart nötig)
 gui.config.gui.showsplash = Splashscreen beim Start zeigen
 gui.config.gui.soundtheme = Soundtheme
+gui.config.gui.testbrowser = Browser testen
+gui.config.gui.testbrowser.message = JDownloader versucht nun http://jdownloader.org in dem Browser zu öffnen.
 gui.config.gui.theme = Theme
+gui.config.gui.use_custom_browser = Benutze benutzerdefinierten Browser
 gui.config.hjsplit.overwrite = Überschreibe existierende Dateien
 gui.config.hjsplit.remove_merged = Lösche Archiv nach dem Zusammenfügen
 gui.config.jac.column.method = Methode
@@ -816,6 +821,7 @@ plugins.errors.pluginerror = Plugin Fehler. Bitte Support informieren
 plugins.errors.uploadedto.premiumtrafficreached = Traffic Grenze erreicht
 plugins.errors.wrongpassword = Passwort falsch
 plugins.host.enterlinkpassword = Bitte Linkpasswort eingeben
+plugins.host.fastload.prepare = Warte auf Linkbestätigung
 plugins.host.fastload.ticketmessage = Kaufen Sie sich ein Fastloadspeedticket um die Geschwindigkeit auf 300kb/s zu erhähen
 plugins.host.fastload.wait_ticketmessage = Warten auf Speedticket
 plugins.host.gigasize.freeaccount.pass = Passwort
@@ -853,6 +859,7 @@ plugins.menu.accounts = Accounts
 plugins.menu.configs = Konfiguration
 plugins.menu.enable_premium = Account aktivieren
 plugins.menu.fastload = Hole Freeticket
+plugins.menu.fastload_refresh = Alle Tickets aktualisieren
 plugins.menu.noaccountsyet = Keine Accounts eingerichtet
 plugins.menu.premiuminfo = AccountInfo holen
 plugins.netload.downloadpassword_question = Passwort geschützt. Passwort eingeben:
@@ -1089,6 +1096,7 @@ showcaptcha.choose.file = Wählen sie eine Bilddatei aus
 showcaptcha.chooser.title = jDownloader :: Zeige Captcha
 sys.ask.rlyclose = Wollen Sie jDownloader wirklich schließen?
 sys.dlc.success = DLC Erstellung erfolgreich. Entpacken testen?
+sys.linklist.addnew.prepare = Downloadlink vorbereiten
 sys.message.welcome = Besuche uns auf http://jdownloader.org
 sys.warning.dlcerror = Fehlerhafter DLC Container
 sys.warning.dlcerror.server = <b>Ist die aktuelle JD Version installiert?</b> <br>Server melden:
