--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -83,7 +83,7 @@ gui.btn_exit = Beenden
 gui.btn_no = Nein
 gui.btn_ok = OK
 gui.btn_save = Speichern
-gui.btn_select = auswählen
+gui.btn_select = Auswählen
 gui.btn_settings = Einstellungen
 gui.btn_start = Start
 gui.btn_stop = Stop
