--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -82,7 +82,7 @@ download.error.message.localio = Nie można zapisać do pliku: %s
 download.error.message.nibble = Przerwane po %s bajtach
 download.error.message.outofmemory = Brakuje pamięci
 download.error.message.rangeheaderparseerror = Nie obsługiwany format nagłówka:
-download.error.message.rangeheaders = Serwer nie obsługuje dzielenia na cżęści
+download.error.message.rangeheaders = Serwer nie obsługuje dzielenia na części
 download.error.message.unavailable = Usługa tymczasowo niedostępna
 download.system.waitForconnection = Ob. %s/%s połączeń...oczekiwanie
 downloadlink.status.done = Koniec
@@ -884,7 +884,7 @@ gui.packageinfo.packagesize = Rozmiar pakietu
 gui.packageinfo.password = Hasło
 gui.packageinfo.rate = Odświeżanie
 gui.packageinfo.title = Informacje o pakiecie: 
-gui.reconnect.confirm = Czy chcesz ponownie nawiązać połaczenie?
+gui.reconnect.confirm = Czy chcesz ponownie nawiązać połączenie?
 gui.reconnect.failed = Ponowne nawiązanie połączenia nie powiodło się
 gui.reconnect.success = Ponowne nawiązanie połączenia powiodło się
 gui.searchdialog.btn_search = Wyszukaj
